--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,9 @@ dependencies = [
     "pandas>=2.3.1",
     "pydantic>=2.11.7",
     "python-jose>=3.5.0",
+    "scikit-learn>=1.7.1",
+    "scipy>=1.16.1",
+    "seaborn>=0.13.2",
     "sqlalchemy>=2.0.43",
+    "statsmodels>=0.14.5",
 ]
